# recursive-bipartite-matching

./: .gitignore  CLAUDE.md  COMPUTE_PRICING.md  EXPERIMENT_STATUS.md  OPERATIONS.md  README.md  WRITEUP.md  dune-project  dune-workspace  rbm.opam
docs/: CONNECTIVITY.md  MMAP_INDEX_PLAN.md  paper.tex  session_log.md
lib/: abstraction.ml  abstraction.mli  acpc_protocol.ml  acpc_protocol.mli  action_abstraction.ml  action_abstraction.mli  action_subtree.ml  action_subtree.mli  card.ml  card.mli  cfr.ml  cfr.mli  cfr_abstract.ml  cfr_abstract.mli  cfr_nolimit.ml  cfr_nolimit.mli  cfr_pruning.ml  cfr_pruning.mli  compact_cfr.ml  compact_cfr.mli  distance.ml  distance.mli  dune  emd_baseline.ml  emd_baseline.mli  emd_baseline_holdem.ml  emd_baseline_holdem.mli  equity.ml  equity.mli  error_bound.ml  error_bound.mli  ev_graph.ml  ev_graph.mli  flat_htbl.ml  flat_htbl.mli  hand_eval.ml  hand_eval.mli  hand_eval5.ml  hand_eval7.ml  hand_eval7.mli  (+25 more)
reports/: cloud_training_live.md  experiment_log.md  results_169b_100M.txt  run_100M_parallel_rbm_2026_05_14.md  run_1B_t32_eps35_parallel_rbm_2026_05_23.md  run_250M_t32_eps35_parallel_rbm_2026_05_16.md
results/: cloud_169b_30M.txt  cloud_20b_16M.txt  cloud_50b_20M.txt  results_20b_10M.txt  (+15 more)
rust/rbm_mccfr/: .gitignore  AGENT_NOTES.md  BENCHMARKS.md  Cargo.toml  checkpoint_25000000.clusters  checkpoint_50000000.clusters  checkpoint_75000000.clusters
rust/rbm_mccfr/benches/: mccfr_bench.rs  mphf_bench.rs
rust/rbm_mccfr/docs/: phase2-ptrhash-result.md
rust/rbm_mccfr/src/: actions.rs  buckets.rs  card.rs  cfr_state.rs  checkpoint.rs  compact_state.rs  config.rs  frozen_state.rs  hand_eval.rs  hand_eval_fast.rs  hungarian.rs  info_key.rs  lib.rs  main.rs  mmap_arena.rs  numa.rs  rbm_buckets.rs  rbm_distance.rs  slumbot.rs  train.rs  traversal.rs  tree.rs
(+39 files in other folders)
